--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "pino-pretty": "^13.0.0",
     "viem": "^2.21.54"
   },
   "devDependencies": {
